crates/kdl-config-derive/tests/ui/append_on_registry.stderr
error: append conflict policy is only valid for Vec<T> fields
  --> tests/ui/append_on_registry.rs:12:5
   |
12 |     #[kdl(registry, conflict = "append")]
   |     ^
